fix: flag resizing on mobile wiht soft keyboard

--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -414,13 +414,15 @@ a {
 
 .flag {
   margin: 0 auto;
-  height: 35vh;
-  width: 100%;
+  height: 20rem;
+  width: auto;
   text-align: center;
   padding: 1rem; }
   @media only screen and (min-width: 37.5em) {
     .flag {
-      height: 35rem; } }
+      height: 35rem;
+      width: 100%;
+      margin-bottom: 5rem; } }
   @media only screen and (min-width: 56.25em) {
     .flag {
       height: 25rem;
@@ -432,8 +434,7 @@ a {
   .flag__img {
     object-fit: cover;
     margin: 0 auto;
-    height: 100%;
-    width: 100%;
+    width: 95%;
     box-shadow: 0 0 1rem rgba(14, 31, 47, 0.4);
     border: solid 0.2rem #fffff6; }
 
